--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=ai-chatbot
+gemini.api.key=AIzaSyAHcaGsBBrUMWKWfvDPBqidDB89eMH-qow
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+# Logging for debugging
+logging.level.org.springframework.web.reactive.function.client=DEBUG
+logging.level.reactor.netty.http.client=DEBUG
